# dyasc-tp-final

./: .project  .travis.yml  BalizaIntegracionContinua.ino  LEDManager.cpp  Sensor.cpp  Sensor.h  manual_test.sh  run_test.sh
src/: AccessPointServer.cpp  AccessPointServer.h  AccessPointServerInterface.hpp  Brain.cpp  Brain.h  CIClient.cpp  CMakeLists.txt  CiInterface.hpp  InterfaceWifi.h  LEDManager.cpp  LEDManager.h  LEDManagerInterface.hpp  MockClient.cpp  MockSensor.cpp  MockWiFIWrapper.cpp  Sensor.cpp  Sensor.h  SensorInterface.hpp  WifiConnector.cpp  WifiConnector.h  WifiConnectorInterface.hpp  WifiWrapper.cpp
test/: BalizaTest.cpp  CMakeLists.txt  MockHttpClient.cpp  MockLEDManager.cpp  MockSensor.cpp  MockWifiConnection.cpp  MockWifiConnector.cpp
